--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "eslint": "^8",
